# SmartRAG

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  NOTICE  Procfile  README.md  docker-compose.yml  fly.toml  pyproject.toml
smartrag/: __init__.py  config.py  core.py  export.py  types.py
smartrag/api/: auth.py  config.py  routes.py  schemas.py  server.py  tenants.py  webhooks.py
smartrag/cli/: __init__.py  main.py
smartrag/feedback/: __init__.py  signals.py  store.py  tuner.py
smartrag/ingest/: __init__.py  dedup.py  extractors.py  fingerprint.py  llm_provider.py  pipeline.py  splitter.py  url_fetcher.py
smartrag/retrieval/: __init__.py  embeddings.py  fts.py  router.py  scorer.py
smartrag/store/: __init__.py  backlinks.py  frontmatter.py  markdown.py  master_index.py
tests/: conftest.py  test_extractors.py  test_feedback.py  test_fingerprint.py  test_frontmatter.py  test_headless_build.py  test_phase2.py  test_phase3.py  test_sdk.py  test_store.py
